回退preview级别API